--- a/jmeter-ssh-sampler/src/main/resources/org/apache/jmeter/protocol/ssh/sampler/OpenSSHSessionSamplerResources.properties
+++ b/jmeter-ssh-sampler/src/main/resources/org/apache/jmeter/protocol/ssh/sampler/OpenSSHSessionSamplerResources.properties
@@ -13,7 +13,7 @@
 #   See the License for the specific language governing permissions and
 #   limitations under the License.
 
-displayName=SSH Open Named Session
+displayName=SSH Open Named Connection
 username.displayName=User Name
 username.shortDescription=User Name used to log in to server
 password.displayName=Password
@@ -31,7 +31,7 @@ connectionTimeout.shortDescription=Time to wait before failing connection (ms)
 useReturnCode.displayName=Use return code
 useReturnCode.shortDescription=A return code different from 0 makes the sampler fail
 useTty.displayName=Use TTY
-useTty.shortDescription=Use TTY when establishing the SSH session
+useTty.shortDescription=Use TTY when establishing the SSH connection
 printStdErr.displayName=Print Standard Error output
 printStdErr.shortDescription=Prints the standard error output in the results
 server.displayName=Server
@@ -43,7 +43,7 @@ connectionManagement.displayName=Connection Management
 #closeConnection.shortDescription=If set to true the SSH connection is closed after the sampler has finished
 tunnels.displayName=Set up tunnels
 tunnels.shortDescription=Set up tunnels or reverse tunnels, syntax [L|R]:port:host:port, only use for persistent named SSH connection
-connectionName.displayName=SSH Connection name
+connectionName.displayName=SSH connection name
 connectionName.shortDescription=Name of the SSH connection to persist
 sessionKeepAliveSeconds.displayName=Connection KeepAlive Seconds
 sessionKeepAliveSeconds.shortDescription=How long the SSH connection must be kept open if there is no traffic (in seconds)
