--- a/jmeter-ssh-sampler/src/main/resources/org/apache/jmeter/protocol/ssh/sampler/SSHClosePersistentSFTPChannelSamplerResources.properties
+++ b/jmeter-ssh-sampler/src/main/resources/org/apache/jmeter/protocol/ssh/sampler/SSHClosePersistentSFTPChannelSamplerResources.properties
@@ -13,8 +13,8 @@
 #   See the License for the specific language governing permissions and
 #   limitations under the License.
 displayName=SSH Close Persistent SFTP channel
-connectionManagement.displayName=Session Management
-connectionName.displayName=SSH Session Name
-connectionName.shortDescription=Name of the SSH session to persist if 'Close session after sampler end' is true
+connectionManagement.displayName=Connection Management
+connectionName.displayName=SSH Connnection Name
+connectionName.shortDescription=Name of the SSH connection to persist if 'Close connection after sampler end' is true
 sftpSessionName.displayName=Persistent SFTP channel Name
-sftpSessionName.displayName=Name of the named SFTP channel on the named persistent SSH session
+sftpSessionName.displayName=Name of the named SFTP channel on the named persistent SSH connection
