--- a/jmeter-ssh-sampler/src/main/resources/org/apache/jmeter/protocol/ssh/sampler/SSHClosePersistentShellSamplerResources.properties
+++ b/jmeter-ssh-sampler/src/main/resources/org/apache/jmeter/protocol/ssh/sampler/SSHClosePersistentShellSamplerResources.properties
@@ -13,8 +13,8 @@
 #   See the License for the specific language governing permissions and
 #   limitations under the License.
 displayName=SSH Close Persistent Shell channel
-connectionManagement.displayName=Session Management
-connectionName.displayName=SSH session Name
-connectionName.shortDescription=Name of the named persistent SSH session
+connectionManagement.displayName=Connection Management
+connectionName.displayName=SSH connection Name
+connectionName.shortDescription=Name of the named persistent SSH connection
 shellName.displayName=Persistent Shell Name
 shellName.shortDescription=Name of the persistent Shell channel to close 
