--- a/jmeter-ssh-sampler/src/main/resources/org/apache/jmeter/protocol/ssh/sampler/SSHCommandSamplerExtraResources.properties
+++ b/jmeter-ssh-sampler/src/main/resources/org/apache/jmeter/protocol/ssh/sampler/SSHCommandSamplerExtraResources.properties
@@ -13,12 +13,12 @@
 #   See the License for the specific language governing permissions and
 #   limitations under the License.
 
-displayName=SSH Open Named Session And Send Command On Exec Channel
+displayName=SSH Open Named Connection And Send Command On Exec Channel
 username.displayName=User Name
 username.shortDescription=User Name used to log in to server
 password.displayName=Password
 password.shortDescription=Password used to log in to server
-hostname.displayName=Hostname
+hostname.displayName=Host Name
 hostname.shortDescription=Server to connect to
 port.displayName=Port
 port.shortDescription=Remote Port on which SSHD is listening
@@ -33,20 +33,20 @@ connectionTimeout.shortDescription=Time to wait before failing connection (ms)
 useReturnCode.displayName=Use return code
 useReturnCode.shortDescription=A return code different from 0 makes the sampler fail
 useTty.displayName=Use TTY
-useTty.shortDescription=Use TTY when establishing the SSH session
+useTty.shortDescription=Use TTY when establishing the SSH connection
 printStdErr.displayName=Print Standard Error output
 printStdErr.shortDescription=Prints the standard error output in the results
 #server.displayName=Server
 #user.displayName=Login
 #keyFile.displayName=Client certificate
 #execute.displayName=Execute
-connectionManagement.displayName=Session Management
-closeConnection.displayName=Close session after sampler end
-closeConnection.shortDescription=If set to true the SSH session is closed after the sampler has finished
+connectionManagement.displayName=Connection Management
+closeConnection.displayName=Close connection after sampler end
+closeConnection.shortDescription=If set to true the SSH connection is closed after the sampler has finished
 tunnels.displayName=Set up tunnels
-tunnels.shortDescription=Set up tunnels or reverse tunnels, syntax [L|R]:port:host:port, only use for persistent named SSH sessions
-connectionName.displayName=SSH Session name
-connectionName.shortDescription=Name of the SSH session to persist if 'Close connection after sampler end' is true
-sessionKeepAliveSeconds.displayName=Session KeepAlive Seconds
-sessionKeepAliveSeconds.shortDescription=How long the SSH session must be kept open if there is no traffic (in seconds)
+tunnels.shortDescription=Set up tunnels or reverse tunnels, syntax [L|R]:port:host:port, only use for persistent named SSH connections
+connectionName.displayName=SSH Connection name
+connectionName.shortDescription=Name of the SSH connection to persist if 'Close connection after sampler end' is true
+sessionKeepAliveSeconds.displayName=Connection KeepAlive Seconds
+sessionKeepAliveSeconds.shortDescription=How long the SSH connection must be kept open if there is no traffic (in seconds)
 
