--- a/jmeter-ssh-sampler/src/main/resources/org/apache/jmeter/protocol/ssh/sampler/SSHOpenPersistentShellSamplerResources.properties
+++ b/jmeter-ssh-sampler/src/main/resources/org/apache/jmeter/protocol/ssh/sampler/SSHOpenPersistentShellSamplerResources.properties
@@ -13,9 +13,9 @@
 #   See the License for the specific language governing permissions and
 #   limitations under the License.
 displayName=SSH Open Persistent Named Shell Channel
-connectionManagement.displayName=Session Management
-connectionName.displayName=SSH session Name
-connectionName.shortDescription=Name of the persistent SSH session
+connectionManagement.displayName=Connection Management
+connectionName.displayName=SSH Connection Name
+connectionName.shortDescription=Name of the persistent SSH connection
 shellName.displayName=Persistent Shell Channel Name
 shellName.shortDescription=Name of the persistent Shell channel to close 
 stripCommand.displayName=Strip Command 
