--- a/jmeter-ssh-sampler/src/main/resources/org/apache/jmeter/protocol/ssh/sampler/SSHPersistentShellSendCommandSamplerResources.properties
+++ b/jmeter-ssh-sampler/src/main/resources/org/apache/jmeter/protocol/ssh/sampler/SSHPersistentShellSendCommandSamplerResources.properties
@@ -13,14 +13,14 @@
 #   See the License for the specific language governing permissions and
 #   limitations under the License.
 displayName=SSH Persistent Shell Channel Send Command
-connectionManagement.displayName=Session Management
-connectionName.displayName=SSH Session Name
-connectionName.shortDescription=Name of the persistent SSH session
+connectionManagement.displayName=Connection Management
+connectionName.displayName=SSH Connection Name
+connectionName.shortDescription=Name of the persistent SSH connection
 shellName.displayName=Persistent Shell Name
 shellName.shortDescription=Name of the persistent Shell channel to send the command on 
 command.displayName=Command
 useTty.displayName=Use Tty
-useTty.shortDescription=Use TTY when establishing the SSH session
+useTty.shortDescription=Use TTY when establishing the SSH connection
 stripCommand.displayName=Strip Command
 stripCommand.shortDescription=If true remove the command sent from the response 
 stripPrompt.displayName=Strip Prompt
