corrected resource strings

--- a/jmeter-ssh-sampler/src/main/resources/org/apache/jmeter/protocol/ssh/sampler/SendSFTPCommandSSHSessionSamplerResources.properties
+++ b/jmeter-ssh-sampler/src/main/resources/org/apache/jmeter/protocol/ssh/sampler/SendSFTPCommandSSHSessionSamplerResources.properties
@@ -54,8 +54,8 @@ sftpSessionName.shortDescription=Persistent SFTP channel Name on the named SSH c
 fileProperties.displayName=File Properties
 fileProperties.shortDescription=File properties for chon, chgrp, and chmod use integer values only
 permissions.displayName=File Permissions 
-permissions.shortDescription=File Permissions expressed as number
+permissions.shortDescription=File Permissions expressed as decimal number
 userId.displayName=User Id
-userId.shortDescription=User Id expressed as number
+userId.shortDescription=User Id expressed as decimal number
 groupId.displayName=Group Id
-groupId.shortDescription=Group Id expressed as number
+groupId.shortDescription=Group Id expressed as decimal number
