--- a/jmeter-ssh-sampler/.gitignore
+++ b/jmeter-ssh-sampler/.gitignore
@@ -6,7 +6,7 @@
 
 # Log file
 *.log
-
+*.ser
 # BlueJ files
 *.ctxt
 
@@ -24,3 +24,4 @@
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 /probleem register windows.txt
+!/target/*.jar
