--- a/jmeter-ssh-sampler/.gitignore
+++ b/jmeter-ssh-sampler/.gitignore
@@ -1,7 +1,15 @@
+
 *.iml
 .idea
-!/target/*.jar
+# Package Files #
+*.jar
+*.war
+*.ear
+*.zip
+*.tar.gz
+*.rar
 /target
+!/target/ApacheJMeter_ssh-*.jar
 # Compiled class file
 *.class
 
@@ -14,13 +22,7 @@
 # Mobile Tools for Java (J2ME)
 .mtj.tmp/
 
-# Package Files #
-*.jar
-*.war
-*.ear
-*.zip
-*.tar.gz
-*.rar
+
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
