--- a/jmeter-ssh-sampler/.gitignore
+++ b/jmeter-ssh-sampler/.gitignore
@@ -16,6 +16,7 @@
 /target/maven-archiver/*
 /target/maven-status/*
 /target/surefire-reports/*
+/target/classes/*
 !/target/ApacheJMeter_ssh-*.jar
 
 hostkey.ser
